--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ colorama==0.4.6
 cryptography==44.0.0
 Flask==3.1.0
 Flask-Cors==5.0.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
 MarkupSafe==3.0.2
+packaging==24.2
 pycparser==2.22
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
